{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 14,
  "lineage": "183991d3-480e-0177-81f0-f592ba3fbe9d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "agronorte_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07405ac9893be113e",
            "arn": "arn:aws:ec2:sa-east-1:659112563378:elastic-ip/eipalloc-07405ac9893be113e",
            "association_id": "eipassoc-06c1797e99aed0fb9",
            "domain": "vpc",
            "id": "eipalloc-07405ac9893be113e",
            "instance": "i-00042f21ac2f8cb44",
            "network_border_group": "sa-east-1",
            "network_interface": "eni-0f0607b63685d33ac",
            "private_dns": "ip-10-0-1-113.sa-east-1.compute.internal",
            "private_ip": "10.0.1.113",
            "public_dns": "ec2-18-229-4-56.sa-east-1.compute.amazonaws.com",
            "public_ip": "18.229.4.56",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.agronorte_server",
            "aws_security_group.agronorte_sg",
            "aws_subnet.agronorte_subnet",
            "aws_vpc.agronorte_vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "agronorte_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ee3929896c3a5135",
            "arn": "arn:aws:ec2:sa-east-1:659112563378:instance/i-00042f21ac2f8cb44",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00042f21ac2f8cb44",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "agronorte-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f0607b63685d33ac",
            "private_dns": "ip-10-0-1-113.sa-east-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.113",
            "public_dns": "ec2-18-229-4-56.sa-east-1.compute.amazonaws.com",
            "public_ip": "18.229.4.56",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d9d66e9608774e99",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0433559b154cd3aba",
            "tags": {
              "Name": "agronorte-server"
            },
            "tags_all": {
              "Name": "agronorte-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00ce6b61fe80ae876"
            ]
          },
          "dependencies": [
            "aws_security_group.agronorte_sg",
            "aws_subnet.agronorte_subnet",
            "aws_vpc.agronorte_vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "agronorte_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:659112563378:internet-gateway/igw-0d3fb7c5d948aed0a",
            "id": "igw-0d3fb7c5d948aed0a",
            "owner_id": "659112563378",
            "tags": {
              "Name": "agronorte-igw"
            },
            "tags_all": {
              "Name": "agronorte-igw"
            },
            "vpc_id": "vpc-06b225af9eb2ad95e"
          },
          "dependencies": [
            "aws_vpc.agronorte_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "agronorte_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:659112563378:route-table/rtb-077c1a2aea15d162e",
            "id": "rtb-077c1a2aea15d162e",
            "owner_id": "659112563378",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d3fb7c5d948aed0a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "agronorte-rt"
            },
            "tags_all": {
              "Name": "agronorte-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b225af9eb2ad95e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.agronorte_igw",
            "aws_vpc.agronorte_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "agronorte_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0964230b7d1f74faa",
            "route_table_id": "rtb-077c1a2aea15d162e",
            "subnet_id": "subnet-0433559b154cd3aba"
          },
          "dependencies": [
            "aws_internet_gateway.agronorte_igw",
            "aws_route_table.agronorte_rt",
            "aws_subnet.agronorte_subnet",
            "aws_vpc.agronorte_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "agronorte_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:659112563378:security-group/sg-00ce6b61fe80ae876",
            "description": "Reglas de acceso para AgroNorte",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00ce6b61fe80ae876",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 5678,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5678
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 8069,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8069
              }
            ],
            "name": "agronorte-sg",
            "name_prefix": "",
            "owner_id": "659112563378",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "agronorte-sg"
            },
            "tags_all": {
              "Name": "agronorte-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b225af9eb2ad95e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.agronorte_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "agronorte_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:659112563378:subnet/subnet-0433559b154cd3aba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0433559b154cd3aba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "659112563378",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "agronorte-subnet"
            },
            "tags_all": {
              "Name": "agronorte-subnet"
            },
            "vpc_id": "vpc-06b225af9eb2ad95e"
          },
          "dependencies": [
            "aws_vpc.agronorte_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "agronorte_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:659112563378:vpc/vpc-06b225af9eb2ad95e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0abed5d33b69b9cb6",
            "default_route_table_id": "rtb-05d80a3e992dbe5e5",
            "default_security_group_id": "sg-07ecc97c50d982bf8",
            "dhcp_options_id": "dopt-08a0eef0da3c0e816",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06b225af9eb2ad95e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05d80a3e992dbe5e5",
            "owner_id": "659112563378",
            "tags": {
              "Name": "agronorte-vpc"
            },
            "tags_all": {
              "Name": "agronorte-vpc"
            }
          }
        }
      ]
    }
  ]
}